[project]
name = "ai-resume-analyzer-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.31",
    "fastapi>=0.128.0",
    "openai-agents>=0.6.9",
    "pypdf>=6.6.0",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
    "sendgrid>=6.12.5",
]
